--- a/src/app/App.css
+++ b/src/app/App.css
@@ -7,3 +7,7 @@
   font-family: "Montserrat-ExtraBold";
   src: url("/src/assets/fonts/Montserrat-ExtraBold.ttf");
 }
+
+.board_container {
+  max-width: 800px;
+}
