--- a/src/components/organisms/Sidebar/style.module.css
+++ b/src/components/organisms/Sidebar/style.module.css
@@ -1,116 +1,145 @@
-.sidebar {
+aside {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 400px;
 }
 
-.interesting {
-    background-color: #fff9f1;
-    padding: 20px;
+.info {
+    padding: 20px; 
+    background-color: #FFF9F1;
 }
 
-.interesting_title {
+.info h3 {
     font-size: 36px;
-    margin-left: 26px;
-    margin-top: 15px;
-    font-weight: 700;
-    color: #3f2b12;
-}
-
-.interest_item {
-    font-size: 22px;
-    font-weight: 700;
-    margin-top: 35px;
-    margin-bottom: 10px;
-    margin-left: 26px;
-    color: #73552f;
-}
-
-.reaction_count {
-    color: #a79278;
-    display: flex;
-    gap: 40px;
-    align-items: center;
-}
-
-.reaction_stat {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    font-size: 20px;
-}
-
-.reaction_stat_img {
-    width: 42px;
-    height: 33px;
-    object-fit: contain;
-}
-
-
-.events {
-    background-color: #fff9f1;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.events_title {
-    font-size: 30px;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 25px;
     font-weight: 800;
-    color: #3f2b12;
+    color: #3F2B12; 
+   margin-top: 20px;
+   margin-left: 20px;
 }
 
-.event_item {
+.info_item {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    width: 100%;
-    max-width: 400px;
+    gap: 60px; 
+    margin-bottom: 25px; 
+}
+.label {
+    font-size: 20px;
+    font-weight: 600;
+    color: #4D3417;
+    margin-left: 20px;
+    margin-top: 15px;
 }
 
-.events_image {
-    width: 350px;
-    height: 200px;
+.value1 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-left: auto;
+    text-align: right;
+    margin-top: 15px;
+}
+.value2 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-left: auto;
+    text-align: right;
+    margin-top: 15px;
+}
+.value3 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-left: auto;
+    text-align: right;
+    margin-top: 15px;
+}
+.value4 {
+    font-weight: 800;
+    font-size: 20px;
+    color: #9FB162;
+    margin-left: auto;
+    text-align: right;
+    margin-top: 15px;
+}
+
+.lichess_info {
+    padding: 20px; 
+    background-color: #FFF9F1;
+}
+
+.lichess_info h3 {
+    font-size: 36px;
+    font-weight: 800;
+    color: #3F2B12; 
+   margin-top: 20px;
+   margin-left: 20px; 
+}
+
+.info_item {
     display: flex;
-    flex-direction: column;
-    object-fit: cover;
-    align-self: center;
+    align-items: center; 
+    gap: 20px; 
+    margin-bottom: 10px; 
+    margin-top: 15px;
 }
 
-.event_details {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.event_title, .event_type {
-    margin: 0;
-}
-
-.event_date {
-    color: #a79278;
-    font-size: 30px;
+.label {
+    font-size: 20px;
     font-weight: 700;
+    color: #4D3417;
+    margin-top: 15px;
+    
 }
 
-.event_title {
-    color: #73552f;
-    font-size: 28px;
-    font-weight: 700;
-    margin-top: auto;
+.value5 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-top: 15px;
+    margin-left: auto;
+    
 }
-
-.event_type {
-    color: #a79278;
-    font-size: 28px;
-    font-weight: 500;
-    margin-top: auto;
+.value6 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-top: 15px;
+    margin-left: auto;
+    
+}
+.value7 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-top: 15px;
+    margin-left: auto;
+    
+}
+.value8 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-top: 15px;
+    margin-left: auto;
+    
+}
+.value9 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-top: 15px;
+    margin-left: auto;
+    
+}
+.value10 {
+    font-weight: 400;
+    font-size: 20px;
+    color: #4D3417; 
+    margin-top: 15px;
+    margin-left: auto;
+    
 }
