refactor: remove files

--- a/src/components/organisms/Article/style.module.css
+++ b/src/components/organisms/Article/style.module.css
@@ -1,5 +1,27 @@
+:root {
+    --article-bg-color: #fff9f1; 
+    --text-color: #3f2b12; 
+    --text-color-stat:#1D2415;
+    --text-color-title:#73552F ;
+    --author-info-color: #73552f; 
+    --reaction-icon-filter: none; 
+}
+
+
+.dark {
+    --article-bg-color: #4B3F31 ; 
+    --text-color: #B9AA89 ; 
+    --text-color-stat:#F0E8D1 ;
+    --text-color-title:#F0E8D1 ; 
+    --author-info-color: #F0E8D1 ; 
+    --reaction-icon-filter: none; 
+}
+
+
+
+
 .article {
-    background-color: #fff9f1;
+    background-color: var(--article-bg-color);
     padding: 20px;
     margin-bottom: 20px;
 }
@@ -20,6 +42,8 @@
     width: 60px;
     height: 60px;
     object-fit: contain;
+    filter: var(--reaction-icon-filter);
+
 }
 
 .author-details {
@@ -31,13 +55,13 @@
 .nickname {
     font-size: 32px;
     font-weight: 700;
-    color: #3f2b12;
+    color: var(--author-info-color);
 }
 
 .pub_date {
     font-size: 32px;
     font-weight: 700;
-    color: #a79278;
+    color: var(--author-info-color);
 }
 
 .article_preview {
@@ -51,13 +75,13 @@
 .article_title {
     font-size: 32px;
     font-weight: 800;
-    color: #4d3417;
+    color: var(--text-color-title);
 }
 
 .article_text {
     font-size: 25px;
     font-weight: 700;
-    color: #73552f;
+    color: var(--text-color);
     margin-bottom: 30px;
 }
 .reactions {
@@ -71,7 +95,7 @@
     gap: 10px;
     font-size: 32px;
     font-weight: 700;
-    color: #a79278;
+    color: var( --text-color-stat);
 }
 
 .article_stat:first-child {
@@ -96,4 +120,10 @@
     width: 60px;
     height: 60px;
     object-fit: contain;
+}
+
+.icon_view,
+.icon_reaction {
+  
+    filter: var(--reaction-icon-filter);
 }
