--- a/src/components/organisms/ArticlePOST/style.module.css
+++ b/src/components/organisms/ArticlePOST/style.module.css
@@ -1,8 +1,27 @@
+/* Светлая тема */
+:root {
+    --article-bg-color: #fff9f1; 
+    --text-color: #3f2b12; 
+    --text-color-stat: #1D2415; 
+    --text-color-title: #73552F; 
+    --author-info-color: #73552f; 
+    --reaction-icon-filter: none; 
+}
 
+/* Тёмная тема */
+.dark {
+    --article-bg-color: #4B3F31; 
+    --text-color: #B9AA89; 
+    --text-color-stat: #F0E8D1; 
+    --text-color-title: #F0E8D1; 
+    --author-info-color: #F0E8D1; 
+    
+}
 
 .article {
-    background-color: #FFF9F1;
+    background-color: var(--article-bg-color);
     padding: 20px;
+    transition: background-color 0.3s ease;
 }
 
 .author_info {
@@ -11,7 +30,6 @@
     gap: 20px;
     margin-left: 25px;
     margin-bottom: 20px;
-
 }
 
 .author_info img {
@@ -19,137 +37,137 @@
     height: 70px;
     object-fit: contain;
     margin-left: 25px;
+    filter: var(--reaction-icon-filter); 
+    transition: filter 0.3s ease;
 }
 
 .author_details {
-    display: flex; 
-    flex-direction: column; 
+    display: flex;
+    flex-direction: column;
     gap: 25px;
 }
 
 .nickname {
-    font-size:32px ;
-    font-weight:700 ; 
-    color: #3F2B12;
-   
+    font-size: 32px;
+    font-weight: 700;
+    color: var(--text-color);
 }
 
 .date {
-    font-size: 32px; 
-    font-weight: 700; 
-    color: #A79278; 
+    font-size: 32px;
+    font-weight: 700;
+    color: var(--text-color-stat);
 }
-.title{
+
+.title {
     font-size: 32px;
     font-weight: 800;
-    color: #4D3417;
+    color: var(--text-color-title);
     margin: 39px 53px 26px;
 }
-.views {
-    display: flex; 
-    align-items: center;
-    gap: 20px; 
-    font-size: 32px;
-    font-weight: 700; 
-    object-fit: contain;
-    color:#A79278 ; 
-    width: auto; 
-    height: auto;
-    margin-left: 53px; 
-} 
-.views img {
-    width: 50px; 
-    height: 50px;
 
+.views {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    font-size: 32px;
+    font-weight: 700;
+    color: var(--text-color-stat);
+    margin-left: 53px;
 }
 
-.text{
+.views img {
+    width: 50px;
+    height: 50px;
+    filter: var(--reaction-icon-filter); 
+    transition: filter 0.3s ease;
+}
+
+.text {
     font-size: 25px;
     font-weight: 700;
-    color:#73552F ;
-    margin:0px 45px 136px;
+    color: var(--text-color-title);
+    margin: 0px 45px 136px;
     margin-bottom: 30px;
 }
-
 
 .Chessimage {
     display: flex;
     align-items: center;
     object-fit: contain;
-    width:900px ;
+    width: 900px;
     margin-left: 25px;
-    
 }
 
-.subtitle{
+.subtitle {
     font-size: 25px;
     font-weight: 700;
-    color:#73552F ;
-    margin:39px 45px 136px;
+    color: var(--text-color-title);
+    margin: 39px 45px 136px;
     margin-bottom: 30px;
     line-height: 1.1;
 }
 
-
-
-.list{
-    
+.list {
     font-weight: 700;
     margin-left: 55px;
-    color:#73552F ;
+    color: var(--text-color-title);
     gap: 100px;
 }
+
 .list li {
     gap: 100px;
     font-size: 25px;
-    color: #73552F; 
-    line-height: 1.5; 
+    color: var(--text-color-title);
+    line-height: 1.5;
     margin-bottom: 20px;
-    position: relative; 
+    position: relative;
 }
 
-.layer1{
+.layer1 {
     margin-left: 61px;
-    width: 60px; 
+    width: 60px;
     height: 60px;
-
 }
 
 .komm_post {
     margin-left: 45px;
-    width: 50px; 
+    width: 50px;
     height: 50px;
 }
-.icongreen{
-    
-    width: 50px; 
+
+.icongreen {
+    width: 50px;
     height: 50px;
-    margin-left: 320px; 
+    margin-left: 320px;
+    filter: var(--reaction-icon-filter); 
+    transition: filter 0.3s ease;
 }
+
 .iconred {
-    width: 60px; 
+    width: 60px;
     height: 60px;
     margin-left: 35px;
+    filter: var(--reaction-icon-filter); 
+    transition: filter 0.3s ease;
 }
 
-
 .reactions {
-    display: flex; 
-   margin-bottom: 25px;
+    display: flex;
+    margin-bottom: 25px;
 }
 
 .reactions span {
-    display: flex; 
+    display: flex;
     align-items: center;
-    gap: 20px; 
+    gap: 20px;
     font-size: 32px;
-    font-weight: 700; 
-    color:#A79278 ; 
+    font-weight: 700;
+    color: var(--text-color-stat);
 }
 
 .reactions img {
-   
-    object-fit: contain; 
+    object-fit: contain;
+    filter: var(--reaction-icon-filter); 
+    transition: filter 0.3s ease;
 }
-
-
