--- a/src/components/organisms/ProfileInfo/style.module.css
+++ b/src/components/organisms/ProfileInfo/style.module.css
@@ -1,22 +1,39 @@
+:root {
+    --profile-bg-color: #FFF9F1; 
+    --text-color: #3F2B12;
+    --secondary-text-color: #73552F; 
+}
+
+
+.dark {
+    --profile-bg-color: #4B3F31;
+    --text-color: #F0E8D1; 
+    --secondary-text-color: #B9AA89; 
+}
+
 .profile_info {
-    padding: 20px; 
-    background-color: #FFF9F1;
+    padding: 20px;
+    background-color: var(--profile-bg-color); 
+    transition: background-color 0.3s ease; 
 }
 
 .section {
-    margin-bottom: 60px; 
+    margin-bottom: 60px;
 }
+
 .section h3 {
     font-size: 30px;
     font-weight: 600;
-    color: #3F2B12; 
-    margin: 0; 
+    color: var(--text-color); 
+    margin: 0;
+    transition: color 0.3s ease; 
 }
 
 .section p {
     font-size: 23px;
-    color:#73552F; 
-    margin-top: 11px; 
+    color: var(--secondary-text-color); 
+    margin-top: 11px;
+    transition: color 0.3s ease; 
 }
 
 .author_info {
@@ -25,12 +42,10 @@
     gap: 20px;
     margin-left: 25px;
     margin-bottom: 20px;
-
 }
 
-
 .author_details {
-    display: flex; 
-    flex-direction: column; 
+    display: flex;
+    flex-direction: column;
     gap: 20px;
 }
