--- a/src/components/organisms/Sidebar/style.module.css
+++ b/src/components/organisms/Sidebar/style.module.css
@@ -1,145 +1,145 @@
+
+:root {
+    --sidebar-bg-color: #FFF9F1; 
+    --text-color: #3F2B12; 
+    --secondary-text-color: #73552F; 
+    --highlight-color: #1D2415; 
+    --date-color: #1D2415; 
+    --event-title-color: #73552F; 
+    --event-format-color: #1D2415;
+    --icon-filter: none; 
+}
+
+
+.dark {
+    --sidebar-bg-color: #4B3F31; 
+    --text-color: #F0E8D1; 
+    --secondary-text-color: #B9AA89; 
+    --highlight-color: #B9AA89; 
+    --date-color: #F0E8D1; 
+    --event-title-color: #B9AA89; 
+    --event-format-color: #B9AA89; 
+    --icon-filter: none; 
+}
+
 aside {
     flex: 1;
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
     gap: 20px;
     width: 400px;
+    height: 2116px;
 }
 
-.info {
-    padding: 20px; 
-    background-color: #FFF9F1;
+.interesting {
+    background-color: var(--sidebar-bg-color);
+    padding: 20px;
 }
 
-.info h3 {
+.interesting h3 {
     font-size: 36px;
-    font-weight: 800;
-    color: #3F2B12; 
-   margin-top: 20px;
-   margin-left: 20px;
+    margin-left: 26px;
+    margin-top: 15px;
+    font-weight: 700;
+    color: var(--text-color);
 }
 
-.info_item {
+.interest-item {
+    font-size: 22px;
+    font-weight: 700;
+    margin-top: 35px;
+    margin-bottom: 10px;
+    margin-left: 26px;
+    color: var(--secondary-text-color);
+}
+
+.reaction-count {
+    color: var(--highlight-color);
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.reaction-count span {
     display: flex;
     align-items: center;
-    gap: 60px; 
-    margin-bottom: 25px; 
-}
-.label {
-    font-size: 20px;
-    font-weight: 600;
-    color: #4D3417;
-    margin-left: 20px;
-    margin-top: 15px;
+    gap: 26px;
 }
 
-.value1 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-left: auto;
-    text-align: right;
-    margin-top: 15px;
-}
-.value2 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-left: auto;
-    text-align: right;
-    margin-top: 15px;
-}
-.value3 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-left: auto;
-    text-align: right;
-    margin-top: 15px;
-}
-.value4 {
-    font-weight: 800;
-    font-size: 20px;
-    color: #9FB162;
-    margin-left: auto;
-    text-align: right;
-    margin-top: 15px;
+.icon4 img,
+.icon5 img {
+    width: 52px;
+    height: 43px;
+    object-fit: contain;
+    filter: var(--icon-filter);
 }
 
-.lichess_info {
-    padding: 20px; 
-    background-color: #FFF9F1;
+.icon5 img {
+    width: 55px;
+    height: 55px;
+    margin-left: 45px;
 }
 
-.lichess_info h3 {
-    font-size: 36px;
-    font-weight: 800;
-    color: #3F2B12; 
-   margin-top: 20px;
-   margin-left: 20px; 
-}
-
-.info_item {
+.events {
+    background-color: var(--sidebar-bg-color);
+    padding: 20px;
     display: flex;
-    align-items: center; 
-    gap: 20px; 
-    margin-bottom: 10px; 
-    margin-top: 15px;
+    flex-direction: column;
+    align-items: center;
 }
 
-.label {
-    font-size: 20px;
+.events h3 {
+    font-size: 30px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    font-weight: 800;
+    color: var(--text-color);
+}
+
+.event-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    max-width: 400px;
+}
+
+.event-item img {
+    width: 350px;
+    height: 200px;
+    object-fit: cover;
+    align-self: center;
+}
+
+.event-details {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.span {
+    color: var(--highlight-color);
+    font-size: 30px;
     font-weight: 700;
-    color: #4D3417;
-    margin-top: 15px;
-    
+    margin-left: 10px;
 }
 
-.value5 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-top: 15px;
-    margin-left: auto;
-    
+.p11 {
+    color: var(--secondary-text-color);
+    font-size: 28px;
+    font-weight: 700;
+    margin-left: 10px;
+    margin-top: auto;
 }
-.value6 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-top: 15px;
-    margin-left: auto;
-    
-}
-.value7 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-top: 15px;
-    margin-left: auto;
-    
-}
-.value8 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-top: 15px;
-    margin-left: auto;
-    
-}
-.value9 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-top: 15px;
-    margin-left: auto;
-    
-}
-.value10 {
-    font-weight: 400;
-    font-size: 20px;
-    color: #4D3417; 
-    margin-top: 15px;
-    margin-left: auto;
-    
+
+.p12 {
+    color: var(--event-format-color);
+    font-size: 28px;
+    font-weight: 500;
+    margin-left: 10px;
+    margin-top: auto;
 }
