--- a/src/app/App.css
+++ b/src/app/App.css
@@ -40,3 +40,11 @@ body {
   color: var(--text-color);
   transition: background-color 0.3s, color 0.3s;
 }
+
+.d-none {
+  display: none;
+}
+
+.d-block {
+  display: block;
+}
