--- a/src/entities/Chessboard/styles.module.css
+++ b/src/entities/Chessboard/styles.module.css
@@ -1,28 +1,116 @@
-.move_list {
-    width: 200px;
+.move_menu_container {
+    display: flex;
     flex-direction: column;
 }
 
+.menu_container {
+    flex: 0 0 auto;
+    height: max-content;
+    margin-bottom: 20px;
+}
+
+.move_list {
+    width: 200px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .chessboard_container {
+    display: flex;
     gap: 30px;
+}
+
+.board_container {
+    width: 600px !important;
+}
+
+.moves_container {
+    overflow-y: scroll;
+    height: 400px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: max-content;
+}
+
+.a {
+    display: flex;
+    height: 30px;
 }
 
 .moves {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    flex: 1 1 auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-self: flex-start;
+    margin-bottom: auto;
+}
+
+.moves > div > p {
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    height: 20px;
+}
+
+.move_num {
+    border: none !important;
+    vertical-align: middle;
+    margin: 0;
+    margin-right: 5px;
+    margin-top: 5px;
+    background-color: antiquewhite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    margin: auto;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 15px;
 }
 
 .moves_navigation {
     display: flex;
     gap: 100px;
+    align-self: flex-end;
 }
 
 .pieces_container {
     display: flex;
-
 }
 
 .d_none {
-    display: none;
+    display: none !important;
+}
+
+.menu_icon,
+.menu_item_icon {
+    width: 30px;
+}
+
+.menu_items {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.menu_item {
+    display: flex;
+    gap: 10px;
+    justify-content: start;
+    align-items: flex-start;
+    margin: 0;
+}
+
+.grid_move {
+    border: 1px solid black;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    height: 20px;
+    width: 50px;
+    margin: 0;
+}
+
+.active {
+    background: #6e6565;
 }
