--- a/src/app/App.css
+++ b/src/app/App.css
@@ -55,7 +55,7 @@ body {
 }
 
 .main {
-  
+
   margin: auto;
   margin-top: 20px;
   max-width: 1500px;
@@ -65,4 +65,118 @@ body {
 .main_container {
   gap: 20px;
   padding: 20px;
+}
+
+.tabs {
+  display: flex;
+  font-size: 30px;
+  font-weight: 400;
+  background-color: var(--author-bg-color);
+  color: var(--tab-text-color); 
+  text-decoration: none;
+  padding: 20px;
+  transition: background-color 0.3s ease, color 0.3s ease; 
+}
+
+.tab {
+  font-size: 30px;
+  font-weight: 400;
+  color: #B9AA89;
+  text-decoration: none;
+  padding: 20px 20px;
+  transition: background-color 0.3s ease, color 0.3s ease; 
+  cursor: pointer;
+}
+
+.tab[data-selected] {
+  background-color: #D6C1AD;  
+  color: #5A4E3F;
+}
+
+.tab:hover {
+  background-color: #D6C1AD; 
+}
+
+.active {
+  background-color: var(--tab-active-color); 
+}
+
+.app {
+  display: flex;
+  height: 100vh;
+}
+
+.sidebar {
+  background-color: #1a1a1a;
+  color: white;
+  width: 250px;
+  padding: 20px;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.input-file {
+	position: relative;
+	display: inline-block;
+}
+.input-file-btn {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	outline: none;
+	text-decoration: none;
+	font-size: 14px;
+	vertical-align: middle;
+	color: rgb(255 255 255);
+	text-align: center;
+	border-radius: 4px;
+	background-color: #419152;
+	line-height: 22px;
+	height: 40px;
+	padding: 10px 20px;
+	box-sizing: border-box;
+	border: none;
+	margin: 0;
+	transition: background-color 0.2s;
+}
+.input-file-text {
+	padding: 0 10px;
+	line-height: 40px;
+	display: inline-block;
+}
+.input-file input[type=file] {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+	display: block;
+	width: 0;
+	height: 0;
+}
+ 
+/* Focus */
+.input-file input[type=file]:focus + .input-file-btn {
+	box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+ 
+/* Hover/active */
+.input-file:hover .input-file-btn {
+	background-color: #59be6e;
+}
+.input-file:active .input-file-btn {
+	background-color: #2E703A;
+}
+ 
+/* Disabled */
+.input-file input[type=file]:disabled + .input-file-btn {
+	background-color: #ccc;
 }
